[package]
name = "entropyscan-rs"
version = "0.1.0"
license = "MIT"
authors = ["Michael Taggart <mtaggart@taggart-tech.com>"]
description = "File entropy scanner to detect malware"
repository = "https://github.com/mttaggart/entropyscan-rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tabled = "0.15.0"
